--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,13 +33,13 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  firebase_core: ^1.13.1
-  firebase_storage: ^10.2.9
-  firebase_auth: ^3.3.11
-  cloud_firestore: ^3.1.10
-  image_picker: ^0.8.4+11
-  intl: ^0.17.0
+  cupertino_icons:
+  firebase_core: ^2.24.0
+  firebase_storage:
+  firebase_auth:
+  cloud_firestore:
+  image_picker:
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
