--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.16.1 <3.0.0"
+  sdk: ">=2.17.1 <3.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -42,6 +42,7 @@ dependencies:
   intl: ^0.18.1
   flutter_bloc: ^8.1.3
   get_it: ^7.6.4
+  uuid: ^4.2.2
 
 dev_dependencies:
   flutter_test:
